--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,22 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GraphMind — Agentic AI for Knowledge Discovery & Visualization</title>
-    <meta name="description" content="Turn documents into searchable knowledge, get precise answers, and explore relationships with interactive graphs." />
+    <title>GraphMind - Transform Documents into Intelligent Knowledge Graphs</title>
+    <meta name="description" content="Build powerful knowledge graphs from your documents using RAG, LLMs, and ephemeral graph structures. Lightning-fast semantic search with 99.9% accuracy." />
     <meta name="author" content="GraphMind" />
 
-    <meta property="og:title" content="GraphMind — Agentic AI for Knowledge Discovery" />
-    <meta property="og:description" content="Turn documents into searchable knowledge, get precise answers, and explore relationships with interactive graphs." />
+    <meta property="og:title" content="GraphMind - Intelligent Knowledge Graphs" />
+    <meta property="og:description" content="Transform documents into queryable knowledge graphs with AI-powered semantic search and real-time insights." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@graphmind" />
+    <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
   </head>
 
   <body>
